[package]
name = "custom-euroscope"
version = "0.1.0"
authors = ["Patrick Winters <19wintersp@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }

bit-vec = "0.6"
imagequant = "4.3"
object = "0.36"

[profile.release]
opt-level = "s"
